[tool.poetry]
name = "fastapi-check"
version = "0.1.0"
description = ""
authors = ["Michał Kowieski <michael.kowieski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.55.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.11.5"
mypy = "^0.780"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
